--- a/Web Dev Portfolio &/CSS/Portal-Style.css
+++ b/Web Dev Portfolio &/CSS/Portal-Style.css
@@ -1,32 +1,72 @@
 body
 {
+  background: white;
+}
+
+.header {
   background: #9DA9B3;
+  padding: 10px;
+}
+
+.section2
+{
+  background: #DFD5CD
+}
+
+.Splitcontainer {
+  display: table;
+  width: 100%;
+}
+
+.left-half {
+  background-color: #ff9e2c;
+  position: absolute;
+  left: 0px;
+  width: 50%;
+}
+
+.right-half {
+  background-color: #b6701e;
+  position: absolute;
+  right: 0px;
+  width: 50%;
+}
+
+.Splitarticle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  padding: 20px;
+}
+
+.split {
+  height: 50%;
+  width: 50%;
+  position: inherit;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 50px;
+}
+
+.left {
+  left: 0;
+  background-color: #9DA9B3;
+}
+
+.right {
+  background-color: #red;
+}
+
+.centered {
+  text-align: center;
 }
 
 .mySlides {display: block;
 margin-left: auto;
 margin-right: auto;
-}
-
-.flex-container {
-  display: flex;
-  background-color: DodgerBlue;
-}
-
-.flex-container > div {
-  background-color: #f1f1f1;
-  margin: 10px;
-  padding: 20px;
-  font-size: 30px;
-}
-
-.center-bubble
-{
-text-align: center;
-border-radius: 25px;
-background-color: #E7DFDD;
-padding: 20px;
-margin: 0px;
 }
 
 .image-style {
@@ -38,7 +78,7 @@ margin: 0px;
 
 .Box
 {
-  margin: 10%
+  margin: 5%
   auto 0;
   padding: 20px;
   box-sizing: border-box;
