--- a/Web Dev Portfolio &/CSS/Portal-Style.css
+++ b/Web Dev Portfolio &/CSS/Portal-Style.css
@@ -3,6 +3,64 @@ body
   background: white;
 }
 
+* {
+  box-sizing: border-box-box;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.row{
+  margin: auto;
+}
+
+[class*="col-"] {
+  float: left;
+}
+
+.col-1 {width: 100%;
+  margin:auto;
+}
+
+.skills ul {
+  list-style-type: none;
+  margin: auto;
+  padding: 0;
+  align-content: center;
+}
+
+.skills li {
+  padding: 8px;
+  margin-bottom: 7px;
+  width: 20%;
+  background-color: #D17B34;
+  color: #ffffff;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0px;
+  margin: 0;
+  list-style: none;
+}
+
+.flex-item {
+  background: tomato;
+  padding: 5px;
+  width: 35%;
+  height: 35%;
+  margin-top: 10px;
+  line-height: 100%;
+  color: white;
+  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+
 .navbar {
   overflow: hidden;
   background-color: #333;
@@ -105,6 +163,13 @@ body
 
 .centered {
   text-align: center;
+  margin: auto;
+  padding-bottom: 10px;
+  width: 500px;
+}
+
+.AboutMe {
+  width: 500px;
 }
 
 .mySlides {display: block;
