--- a/Web Dev Portfolio &/CSS/Portal-Style.css
+++ b/Web Dev Portfolio &/CSS/Portal-Style.css
@@ -40,6 +40,18 @@ body
   color: #ffffff;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  grid-gap: 1.5rem;
+}
+.grid > div {
+  padding: 1rem;
+  background-color: #D17B34;
+  color: #ffffff;
+}
+
+
 .flex-container {
   display: flex;
   flex-wrap: wrap;
@@ -166,6 +178,13 @@ body
   margin: auto;
   padding-bottom: 10px;
   width: 500px;
+}
+
+.centeredSplit {
+  text-align: center;
+  margin: auto;
+  padding-bottom: 0px;
+  width: 400px;
 }
 
 .AboutMe {
